fix: use Java 8-compatible map/list construction in Judge